group 'se.omegapoint.academy.tdd-lab'
version '1.0-SNAPSHOT'

apply plugin: 'java'

sourceCompatibility = 17

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.14'
    implementation group: 'org.json', name: 'json', version: '20201115'

    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.9.2'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-params', version: '5.9.2'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.9.2'
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.8.0'
    testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.10.19'
}

test {
    jvmArgs('--add-opens=java.base/java.lang=ALL-UNNAMED')

    useJUnitPlatform()
}

wrapper {
    gradleVersion = '8.0.2'
    distributionUrl = distributionUrl.replace("bin", "all")
}
